<resources>
    <string name="app_name">View &amp; Resources</string>
    <string name="name">name</string>
    <string name="select">Select</string>
    <string name="phone">Phone</string>
    <string name="adress">Address</string>
    <string name="date">Date</string>
    <string name="notes">Notes</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="Close">Закрыть</string>
    <string name="place_order">Place order</string>
    <string name="tax">Tax:</string>
    <string name="shipping">Shipping:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="order_total">Order Total:</string>
    <string name="resest_my_password">Resest my password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="list_item">List item</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="dollar">$</string>
    <string name="items_in_your_cart">items in your cart</string>
    <string name="clip">clip</string>
    <string name="more">more</string>
    <string name="cancel">Cancel</string>
    <string name="ivan_petrov">Ivan Petrov</string>
    <string name="_1_234_567_8900">+1(234)567-8900</string>
    <string name="password_string">Password</string>
    <string name="_175_50">$175.50</string>
    <string name="_140">$140</string>
    <string name="_25">$25</string>
    <string name="_10_50">$10.50</string>
    <string name="mobile">Mobile</string>
    <string name="_123_lenin_street_apt_6">123, Lenin street, Apt.6</string>
    <string name="tokyo">Tokyo</string>
    <string name="australia">Australia</string>
    <string name="birthday">Birthday</string>
    <string name="loves_burgers_and_french_fries">Loves burgers and french fries</string>
    <string name="Select_phone">Выберите телефон</string>
</resources>