<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginVertical="12dp"
        android:layout_marginStart="16dp"
        android:layout_weight="0"
        android:src="@drawable/ic_no_image"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayoutDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_weight="0"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/textViewPrice"
        app:layout_constraintStart_toEndOf="@id/photo"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item"
            android:textAppearance="@style/Theme.TextView.FontRobotoRegular.22.TitleOnSurface" />


        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            android:textAppearance="@style/Theme.TextView.FontRobotoRegular.14.ColorOnSurfaceVariant"
            android:textColor="?attr/colorOnSurfaceVariant" />


        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/description"
            android:textAppearance="@style/Theme.TextView.FontRobotoRegular.14.ColorOnSurfaceVariant"
            android:textColor="?attr/colorOnSurfaceVariant"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/dollar"
        android:textAppearance="@style/Theme.TextView.FontRobotoRegular.22.Tertiary"
        android:textColor="?attr/colorTertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_gravity="top"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:dividerColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo" />


</androidx.constraintlayout.widget.ConstraintLayout>
