<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="22dp">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/login"
        android:textAppearance="@style/Theme.TextView.FontRobotoRegular.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_input_login"
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/login"
        app:hintTextAppearance="@style/Theme.TextView.FontRobotoRegular.12.ColorOnSurfaceVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:textAppearance="@style/Theme.TextView.FontRobotoRegular.16.ColorOnSurface" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_input_password"
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/password"
        app:hintTextAppearance="@style/Theme.TextView.FontRobotoRegular.12.ColorOnSurfaceVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_input_login"
        app:passwordToggleDrawable="@drawable/ic_sunny"
        app:passwordToggleEnabled="true"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:text="@string/password_string"
            android:textAppearance="@style/Theme.TextView.FontRobotoRegular.16.ColorOnSurface" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reset"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/resest_my_password"
        android:textAppearance="@style/Theme.TextView.FontRobotoMedium.14.Primary"
        android:textColor="#3E5F90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_input_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginEnd="12dp"
        android:text="@string/login"
        android:textAppearance="@style/Theme.TextView.FontRobotoMedium.14.Primary"
        android:textColor="#3E5F90"
        app:layout_constraintEnd_toStartOf="@id/button_cancel"
        app:layout_constraintTop_toBottomOf="@id/button_reset" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/cancel"
        android:textAppearance="@style/Theme.TextView.FontRobotoMedium.14.Primary"
        android:textColor="#555F71"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_reset" />

</androidx.constraintlayout.widget.ConstraintLayout>